<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class=".CatalogueItemDetailBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.ingridr.catalogue.ui.main.CatalogueDetailsViewModel" />

        <variable
            name="color"
            type="int" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/catalogueDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setItemImage="@{model.product.image}"
            tools:src="@drawable/ic_launcher_background" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.cardview.widget.CardView
            android:id="@+id/priceAndColours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline">
            <!--                app:layout_constraintTop_toBottomOf="@id/guideline">-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/infosContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/itemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{String.valueOf(model.product.price )}"
                    android:textSize="36sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="$ 250" />

                <TextView
                    android:id="@+id/freeShipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/free_shipping_text"
                    android:textAlignment="viewEnd"
                    android:textColor="#009688"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/itemPrice"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Free shipping World Wide" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/freeShipping" />

                <TextView
                    android:id="@+id/productDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="18dp"
                    android:maxLines="4"
                    android:text="@{model.description}"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/separator"
                    tools:text="@string/generic_item_description_text" />

                <TextView
                    android:id="@+id/coulours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/colours_text"
                    android:textStyle="bold"
                    android:visibility="@{model.colors.size()>0? View.VISIBLE: View.GONE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productDescription"
                    tools:text="@string/colours_text" />

                <View
                    android:id="@+id/firstColour"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@{model.colors[0].getColor()}"
                    android:visibility="@{model.colors.size()>0? View.VISIBLE: View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/coulours"
                    app:layout_constraintTop_toBottomOf="@id/productDescription" />


                <View
                    android:id="@+id/secondColour"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@{model.colors[1].getColor()}"
                    android:visibility="@{model.colors.size()>1? View.VISIBLE: View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/firstColour"
                    app:layout_constraintTop_toBottomOf="@id/productDescription" />

                <View
                    android:id="@+id/thirdColour"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@{model.colors[2].getColor()}"
                    android:visibility="@{model.colors.size()>2? View.VISIBLE: View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/secondColour"
                    app:layout_constraintTop_toBottomOf="@id/productDescription" />

                <TextView
                    android:id="@+id/sizeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/sizes_text"
                    android:textStyle="bold"
                    android:visibility="@{model.product.size != null ? View.VISIBLE: View.GONE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/secondColour" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/rateAppId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceAndColours">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/rateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:lines="2"
                    android:text="@string/rate_product_text"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/firstStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@android:drawable/btn_star_big_off"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline2"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/secondStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@android:drawable/btn_star_big_off"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/firstStar"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/thirdStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@android:drawable/btn_star_big_off"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/secondStar"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/fourthStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@android:drawable/btn_star_big_off"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/thirdStar"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/fifthStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@android:drawable/btn_star_big_off"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/fourthStar"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="121dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/whiteColor"
            android:backgroundTint="@{(model.inWishList == true)? @android:color/black : @color/textRedColor}"
            android:onClick="@{() -> (model.inWishList == true) ? model.removeFromWishList() : model.addToWishList()}"
            android:text="@{(model.inWishList == true) ? @string/remove_from_wish_list_text :@string/add_to_wish_list_text}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rateAppId" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
